--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -15,17 +15,17 @@
             <DataGrid x:Name="DataGrid_Main" Margin="0" 
             	CellEditEnding="DataGrid_Main_CellEditEnding" 
             	BeginningEdit="DataGrid_Main_BeginningEdit" 
-            	AutoGenerateColumns="False">
+            	AutoGenerateColumns="False" CanUserSortColumns="False">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="DBId" Visibility="Collapsed" Binding="{Binding DBId}"/>
                     <DataGridTextColumn Header="序号" IsReadOnly="True" Binding="{Binding 序号}"/>
                     <DataGridTextColumn Header="月" IsReadOnly="True" Binding="{Binding 月}"/>
                     <DataGridTextColumn Header="日" Binding="{Binding 日}"/>
-                    <DataGridTextColumn Header="单位名称" Binding="{Binding 单位名称}"/>
-                    <DataGridTextColumn Header="用途" Binding="{Binding 用途}"/>
-                    <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}"/>
-                    <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}"/>
-                    <DataGridTextColumn Header="结余" Binding="{Binding 结余}" IsReadOnly="True" ElementStyle="{DynamicResource TextBlockStyle_右对齐}"/>
+                    <DataGridTextColumn Header="单位名称" Binding="{Binding 单位名称}" MinWidth="100"/>
+                    <DataGridTextColumn Header="用途" Binding="{Binding 用途}" MinWidth="100"/>
+                    <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="100"/>
+                    <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="100"/>
+                    <DataGridTextColumn Header="结余" Binding="{Binding 结余}" IsReadOnly="True" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="100"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
