--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -59,7 +59,7 @@
         <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Right" Margin="0,0,118,73" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="120"/>
 
         <!--登陆弹出窗口-->
-        <Popup Name="Popup_登陆" StaysOpen="True" Placement="Mouse">
+        <Popup Name="Popup_登陆" StaysOpen="True" IsOpen="True" Placement="Relative">
             <Border BorderThickness="2" BorderBrush="SteelBlue" Width="400" Height="200">
                 <Grid Background="White">
                     <DockPanel Height="28" VerticalAlignment="Top" Background="SteelBlue" >
