--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -4,7 +4,6 @@
         <!-- 菜单栏 -->
         <Menu Height="25" Margin="0,0,307,0" VerticalAlignment="Top" Width="200" HorizontalAlignment="Left" Background="{x:Null}" >
             <MenuItem Header="文件" Height="25">
-                <MenuItem x:Name="MenuItem_登陆" Header="登陆" Click="MenuItem_登陆_Click"/>
                 <MenuItem x:Name="MenuItem_设置" Header="设置" Click="MenuItem_设置_Click"/>
                 <MenuItem x:Name="MenuItem_退出" Header="退出" Click="MenuItem_退出_Click"/>
             </MenuItem>
@@ -58,28 +57,20 @@
         <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Right" Margin="0,0,408,73" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="120"/>
         <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Right" Margin="0,0,118,73" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="120"/>
 
-        <!--登陆弹出窗口-->
-        <Popup Name="Popup_登陆" StaysOpen="True" IsOpen="True" Placement="Relative">
-            <Border BorderThickness="2" BorderBrush="SteelBlue" Width="400" Height="200">
-                <Grid Background="White">
-                    <DockPanel Height="28" VerticalAlignment="Top" Background="SteelBlue" >
-                        <TextBox Height="26" Name="TxtBoxTitle" Width="120" Background="SteelBlue" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White" Focusable="False" IsHitTestVisible="False" IsTabStop="False" VerticalContentAlignment="Center">登陆</TextBox>
-                    </DockPanel>
-                    <Grid Margin="0,30,0,0" >
-                        <TextBox Height="25" x:Name="TextBox_登陆_用户名" Width="200" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="146,25,0,0" Text="admin" VerticalAlignment="Top" />
-                        <PasswordBox x:Name="PasswordBox_登陆_密码" HorizontalAlignment="Left" Margin="146,62,0,0" VerticalAlignment="Top" Height="25" Width="200" FontSize="20"  />
-                        <Button x:Name="Button_登陆_登陆" Content="登陆" HorizontalAlignment="Left" Margin="146,98,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_登陆_Click" OpacityMask="White"/>
-                        <Button x:Name="Button_登陆_取消" Content="取消" HorizontalAlignment="Left" Margin="243,98,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_取消_Click" OpacityMask="White"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="44,25,0,0" TextWrapping="Wrap" Text="用户名：" VerticalAlignment="Top"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="44,62,0,0" TextWrapping="Wrap" Text="密  码：" VerticalAlignment="Top"/>
-                        <TextBlock x:Name="TextBlock_密码错误提示" HorizontalAlignment="Left" Margin="146,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="210" Height="28" Foreground="#FFA82323" />
-                    </Grid>
-                </Grid>
-            </Border>
-        </Popup>
         <!--未登陆的遮盖面板-->
-        <Grid x:Name="Grid_遮盖" Margin="0,25,0,0" Background="White" Visibility="Collapsed" >
+        <Grid x:Name="Grid_遮盖" Background="White" >
             <Image HorizontalAlignment="Right" Height="194" Margin="0,0,62,68" VerticalAlignment="Bottom" Width="538" Source="Image/Pyramid_Logo_V1_c_140204.png"/>
+            <Canvas HorizontalAlignment="Left" Height="190" Margin="72,35,0,0" VerticalAlignment="Top" Width="310" Background="#FF2CA6E0">
+                <Grid Background="White" Canvas.Left="5" Canvas.Top="22" Width="300" Height="163" >
+                    <TextBox Height="25" x:Name="TextBox_登陆_用户名" Width="200" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="93,22,0,0" Text="admin" VerticalAlignment="Top" />
+                    <PasswordBox x:Name="PasswordBox_登陆_密码" HorizontalAlignment="Left" Margin="93,59,0,0" VerticalAlignment="Top" Height="25" Width="200" FontSize="20"  />
+                    <Button x:Name="Button_登陆_登陆" Content="登陆" HorizontalAlignment="Left" Margin="93,95,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_登陆_Click" OpacityMask="White"/>
+                    <Button x:Name="Button_登陆_取消" Content="取消" HorizontalAlignment="Left" Margin="190,95,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_取消_Click" OpacityMask="White"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="14,22,0,0" TextWrapping="Wrap" Text="用户名：" VerticalAlignment="Top"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="14,59,0,0" TextWrapping="Wrap" Text="密  码：" VerticalAlignment="Top"/>
+                    <TextBlock x:Name="TextBlock_密码错误提示" HorizontalAlignment="Left" Margin="93,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="210" Height="28" Foreground="#FFA82323" />
+                </Grid>
+            </Canvas>
         </Grid>
     </Grid>
 </Window>
