--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -1,6 +1,6 @@
-﻿<Window x:Class="Wpf.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+﻿<Window x:Name="Win_Main" x:Class="Wpf.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="金字塔财务管理工具" Height="600" Width="1000" WindowStartupLocation="CenterScreen" Closed="Window_Closed" FontFamily="SimSun" FontSize="16">
-    <Grid >
+    <Grid x:Name="Grid_Main" >
         <!-- 菜单栏 -->
         <Menu Height="25" Margin="0,0,307,0" VerticalAlignment="Top" Width="200" HorizontalAlignment="Left" Background="{x:Null}" >
             <MenuItem Header="文件" Height="25">
