--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -16,13 +16,13 @@
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="DBId" Visibility="Collapsed" Binding="{Binding DBId}"/>
                     <DataGridTextColumn Header="序号" IsReadOnly="True" Binding="{Binding 序号}" Visibility="Collapsed"/>
-                    <DataGridTextColumn Header="月" IsReadOnly="True" Binding="{Binding 月}"/>
-                    <DataGridTextColumn Header="日" Binding="{Binding 日}"/>
-                    <DataGridTextColumn Header="单位名称" Binding="{Binding 单位名称}" MinWidth="100"/>
-                    <DataGridTextColumn Header="用途" Binding="{Binding 用途}" MinWidth="100"/>
-                    <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="100"/>
-                    <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="100"/>
-                    <DataGridTextColumn Header="结余" Binding="{Binding 结余}" IsReadOnly="True" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="100"/>
+                    <DataGridTextColumn Header="月" IsReadOnly="True" Binding="{Binding 月}" MinWidth="24"/>
+                    <DataGridTextColumn Header="日" Binding="{Binding 日}" MinWidth="40"/>
+                    <DataGridTextColumn Header="单位名称" Binding="{Binding 单位名称}" MinWidth="240"/>
+                    <DataGridTextColumn Header="用途" Binding="{Binding 用途}" MinWidth="240"/>
+                    <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="102"/>
+                    <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="102"/>
+                    <DataGridTextColumn Header="结余" Binding="{Binding 结余}" IsReadOnly="True" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="112"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
